<resources>
    <string name="app_name">MY POWER</string>
    <string name="heading">POWER DEVELOPMENT DEPARTMENT\nJAMMU &amp; KASHMIR GOVERNMENT</string>
    <string name="total_theft_detected">TOTAL THEFT DETECTED : </string>
    <string name="login">Officer Login</string>
    <string name="officer_name">OFFICER NAME</string>

    <string name="complaints">Complaints</string>
    <string name="resolved">Resolved</string>
    <string name="pending">Pending</string>
    <string name="kindly_select_the_type_of_user_to_login">Kindly select the type of user to login</string>
    <string name="login_for_emp">Login For Employees</string>
    <string name="officer">OFFICER</string>
    <string name="viewComplaint">View Status</string>
    <string name="viewComp">View Complaint</string>
    <string name="empLogin">Employee Login</string>
    <string name="user">USER</string>
    <string name="regComplaint">Register Complaint</string>
    <string name="please_enter_following_details">Please Enter Following Details</string>
    <string name="name">PILFERAGE NAME</string>
    <string name="nameaddress">NAME AND ADDRESS OF PILFERAGE LOCATION</string>
    <string name="address_of_reference">ADDESS OF PILFERAGE</string>
    <string name="landmark">LANDMARK</string>
    <string name="subdivision">SUBDIVISION</string>
    <string name="districtt">DISTRICT</string>
    <string name="address">ADDRESS</string>
    <string name="type_of_property">TYPE OF PROPERTY</string>
    <string name="type_of_theft">TYPE OF THEFT</string>
    <string name="lat_lng">LAT/LNG</string>
    <string name="remark">Remarks</string>
    <string name="upload_photograph">UPLOAD PHOTOGRAPH</string>
    <string name="submit">Submit</string>
    <string name="track">Track</string>
    <string name="do_you_want_to_provide_your">Do you want to provide your</string>
    <string name="contact_detail">Contact Detail ?</string>
    <string name="we_will_ensure_that_the_information_provided_will_be_kept">We will ensure that the information provided will be kept</string>
    <string name="confidential">confidential.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="c_name">Enter Name</string>
    <string name="otp">Enter OTP</string>
    <string name="mobile_no">Enter mobile Number</string>
    <string name="email">Email</string>
    <string name="congratulation_you_have_registered_nsuccessfully_with_the_system">Thank You, your Complaint have been registered successfully with the System</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="complaint_id">Complaint Id :</string>
    <string name="complaint_status">Complaint Status :</string>
    <string name="new_user_register_here">New User.<u>Register Here.</u></string>
    <string name="district">District</string>
    <string name="division">Division</string>
    <string name="designation">Designation</string>
    <string name="update_complaint_status">Update Complaint Status</string>
    <string name="_1_whether_location_was_found">1. Whether location was found</string>
    <string name="_2_whether_theft_was_detected">Select Whether theft was detected on particular location</string>
    <string name="wheter_defaulter_was_an_existing_consumer">Select Whether Defaulter was an Existing Consumer</string>
    <string name="account_no">Account No</string>
    <string name="plenty_impose">Penalty Amount</string>
    <string name="view_complaints">View Complaints</string>
    <string name="district_wise_complaint_status">District-wise Complaint Status</string>
    <string name="s_no">S.No.</string>
    <string name="division_name">Division Name</string>
    <string name="complain_received">Complaint Received</string>
    <!--<string name="complaint_resolved">Complaint Resolved</string>-->
    <string name="theft_detected">Theft Detected</string>
    <string name="theft_not_detected">Theft Not Detected</string>
    <string name="complaint_pending">Complaint Pending</string>
    <string name="filter_by">Filter by :</string>
    <string name="update_status">Update Status</string>
    <string name="total_theft_count">66447474</string>
    <string name="login_to">LOGIN TO</string>
    <string name="theft_detection_app">Power Theft Detection App</string>
    <string name="enter_password">Enter Password</string>
    <string name="logout">Logout</string>
    <string name="officer_login">Officer Login</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_password">Change Password</string>
    <string name="complaint_submission">Complaint Submission</string>
    <string name="complaint_photo">Complaint Photo</string>
    <string name="complaint_detail">Complaint Detail</string>
    <string name="officer_detail_and_complaint_status">Officer Detail and Complaint Status</string>
    <string name="complaint_address">Complaint Address :</string>
    <string name="complaint_date">Complaint Date :</string>
    <string name="photo">Photo</string>
    <string name="get_otp">Get OTP</string>
    <string name="we_will_send_a_sms_to_verify_your_phone_number">We will send a sms to verify your phone number</string>
    <string name="_91">+91</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="track_location">Track Location :</string>
    <string name="remarks">Remarks</string>
</resources>
