<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pragyaware.sarbjit.jkpddapp.mActivity.UserComplaintActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    android:src="@drawable/locked" />

                <com.pragyaware.sarbjit.jkpddapp.mUtil.FontTextViewBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/complaint_submission"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/iv_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    android:src="@drawable/forms" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp">

                    <EditText
                        android:id="@+id/remark_edtVw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:lines="4"
                        android:hint="@string/remark"
                        android:inputType="textMultiLine"
                        android:padding="10dp"
                        android:textAlignment="textStart"
                        android:textColor="#000000"
                        android:textColorHint="@color/colorPrimaryDark"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>



            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/capture_imgVw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    android:src="@drawable/camera" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/capture_imgVw"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <com.pragyaware.sarbjit.jkpddapp.mUtil.FontTextViewRegular
                        android:id="@+id/tv_upload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/upload_photograph"
                        android:padding="5dp"
                        android:textAlignment="textStart"
                        android:textColor="#000000"
                        android:textColorHint="@color/colorPrimaryDark"
                        android:textSize="14sp" />


                    <!--<ImageView-->
                    <!--android:id="@+id/first_imgVw"-->
                    <!--android:layout_width="150dp"-->
                    <!--android:layout_height="150dp"-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:contentDescription="@string/app_name"-->
                    <!--android:visibility="gone" />-->


                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1">

                <GridView
                    android:id="@+id/imgGridVw"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:horizontalSpacing="10dp"
                    android:numColumns="3"
                    android:verticalSpacing="10dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:padding="5dp">

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/button_red"
                    android:text="@string/submit"
                    android:textColor="@color/white" />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</LinearLayout>
